<resources>
    <string name="app_name">SocialApp</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with google</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_dm">DM</string>
    <string name="title_likes">Likes</string>
    <string name="title_profile">Profile</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>


    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
