<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/colorPrimary"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="70dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_fb"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/fb_signin_logo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:background="@android:color/transparent"
            android:text="@string/login_with_facebook"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/login_btn_google"
        android:gravity="center">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:src="@drawable/google_signin_logo" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:text="@string/login_with_google"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>